<resources>
    <string name="app_name">ShareArt</string>
    <string name="hasi_saioa_tituloa">HASI SAIOA</string>
    <string name="korreo_elektronikoa_hint">Korreo elektronikoa</string>
    <string name="pasahitza_hint">Pasahitza</string>
    <string name="baieztatu_pasahitza_hint">Baieztatu pasahitza</string>
    <string name="ez_daukazu_kontu_bat">Ez daukazu kontu bat?</string>
    <string name="erregistratu_linka">ERREGISTRATU HEMEN</string>
    <string name="erabiltzailea_hint">Erabiltzailea</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deskripzioa_hint">Deskripzioa</string>
    <string name="titulua_argitaratu">ARGITARATU ZURE MARRAZKIA</string>
    <string name="kategoria_titulua">KATEGORIA</string>
    <string name="transtionname_picture">transitionnamepicture</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>