<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/argazkia_igo_fondoa"
    tools:context=".activities.PostActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="379dp"
        android:layout_height="60dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/titulua_argitaratu"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <ImageView
            android:id="@+id/ImageViewArgazkiaIgo"
            android:layout_width="167dp"
            android:layout_height="162dp"
            android:src="@drawable/kamara_argazkia_igotzeko" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="294dp"
        android:layout_height="461dp"
        android:layout_gravity="center"
        android:background="@drawable/rectangulo_login"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943">

        <!-- Deskripzioa  -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/deskripzioa_ikonoa" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextWhite">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/deskripzioa_hint"
                    android:inputType="textImeMultiLine"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Kategoria -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/kategoria_titulua"
            android:textSize="18sp" />

        <!-- Layout horizontal -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Layout bertikala ezkerra -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="210dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <!-- Natura -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/natura_kategoria" />

                <!-- Hiperrealismo -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/hiperrealismo_kategoria" />

                <!-- Erretratoak -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/erretratoak_kategoria" />

                <!-- Grafitiak -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/graffitiak_kategoria" />
            </LinearLayout>

            <!-- Layout bertikala eskuma -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="210dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <!-- Komikia -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/komikia_kategoria" />

                <!-- Ilustrazioa -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ilustrazioa_kategoria" />

                <!-- Karikatura -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/karikatura_kategoria" />

                <!-- Natura hila -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/natura_hila_kategoria" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-black"
            android:hint="Aukeratutako kategoriak: "
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="5dp"/>

        <ImageButton
            android:id="@+id/ImageButtonHasiSaioa"
            android:layout_width="147dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/kolorea"
            android:src="@drawable/argitaratu_botoia"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ProgressBar
            android:id="@+id/indeterminateBarPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>